k8s/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nftytribe-v2-be
spec:
  replicas: 1
  selector:
    matchLabels:
      nftytribe-v2-dev: api
  template:
    metadata:
      labels:
        nftytribe-v2-dev: api
    spec:
      volumes:
        - name: nftytribe
          persistentVolumeClaim:
            claimName: nftytribe-be
      containers:
        - name: nftytribe-v2-api
          resources:
            requests:
              cpu: 200m
              memory: 250Mi
          image: radianceobi/nftytribe-v2-be
          ports:
            - containerPort: 4000
          volumeMounts:
            - mountPath: /logs
              name: nftytribe
