k8s/staging/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: nftytribe-v2-be-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    nftytribe-v2-dev: api
  ports:
    - port: 4000
      targetPort: 4000
