k8s/staging/mysql-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-cluster-ip-service
spec:
  selector:
    component: mysql
  type: LoadBalancer
  ports:
    - port: 3306
      targetPort: 3306
