k8s/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nftytribe-v2-be-networks
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: nftytribe-v2-be-cert
    nginx.org/client-max-body: 50m
    nginx.ingress.kubernetes.io/configuration-snippet: |
      limit_req_zone $binary_remote_addr zone=req_per_ip:10m rate=10r/s;
      limit_req zone=req_per_ip delay=30s;
spec:
  tls:
    - hosts:
        - dev.api.v2.nftytribe.io
      secretName: dev.api.v2-tls
  rules:
    - host: dev.api.v2.nftytribe.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nftytribe-v2-be-cluster-ip-service
                port:
                  number: 4000
